--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -11,7 +11,7 @@ body {
     line-height: 1.5;
     color: rgb(0, 0, 0);
     margin: 0;
-    background-color: #F9F0DA;
+    background-image: linear-gradient(-100deg, rgba(30, 26, 34, 0.9) 10%, rgba(28, 159, 168, 0.8) 90%);
 }
 
 a {
@@ -27,7 +27,7 @@ p {
     padding-top: 10px;
     padding-bottom: 10px;
     position: fixed;
-    background-color: #324b4e;
+    background-color: #2b2b53;
     box-shadow: 0 1px 3px rgba(235, 235, 235, 0.12), 0 1px 1px rgba(207, 207, 207, 0.14),
         0 2px 1px rgba(241, 241, 241, 0.2);
     z-index: 1;
@@ -108,7 +108,7 @@ p {
     margin-left: 20px;
     min-width: 320px;
     flex-basis: calc((100% - 80px) / 4);
-    border: 2px solid #324b4e;
+    border: 2px solid rgb(241, 238, 238);
     border-radius: 10px;
     overflow: hidden;
     transition: all 0.3s;
@@ -140,7 +140,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #324b4e;
+    color: rgb(255, 255, 255);
 }
 
 .info-item:not(:first-child) {
