--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -11,7 +11,8 @@ body {
     line-height: 1.5;
     color: rgb(0, 0, 0);
     margin: 0;
-    background-image: linear-gradient(-100deg, rgba(30, 26, 34, 0.9) 10%, rgba(28, 159, 168, 0.8) 90%);
+    // background-image: linear-gradient(-100deg, rgba(30, 26, 34, 0.9) 10%, rgba(28, 159, 168, 0.8) 90%);
+    background-color: #F9F0DA;
 }
 
 a {
@@ -27,7 +28,7 @@ p {
     padding-top: 10px;
     padding-bottom: 10px;
     position: fixed;
-    background-color: #2b2b53;
+    background-color: #324b4e;
     box-shadow: 0 1px 3px rgba(235, 235, 235, 0.12), 0 1px 1px rgba(207, 207, 207, 0.14),
         0 2px 1px rgba(241, 241, 241, 0.2);
     z-index: 1;
@@ -41,7 +42,7 @@ p {
 
 .search-form input {
     width: 20%;
-    border-radius: 4px 0 0 4px;
+    border-radius: 20px 0 0 20px;
     border: none;
     outline: none;
     background-color: rgb(248, 248, 248);
@@ -55,9 +56,9 @@ p {
     align-items: center;
     width: 2.5em;
     border: none;
-    background-color: #0c656b;
+    background-color: #F9F0DA;
 
-    border-radius: 0 4px 4px 0;
+    border-radius: 0 20px 20px 0;
     cursor: pointer;
 }
 
@@ -108,7 +109,7 @@ p {
     margin-left: 20px;
     min-width: 320px;
     flex-basis: calc((100% - 80px) / 4);
-    border: 2px solid rgb(241, 238, 238);
+    border: 2px solid #324b4e;
     border-radius: 10px;
     overflow: hidden;
     transition: all 0.3s;
@@ -140,7 +141,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: rgb(255, 255, 255);
+    color: #324b4e;
 }
 
 .info-item:not(:first-child) {
